# New-tracking

./: CMakeLists.txt  README.md  main.cpp  trackedPoint.cpp  trackedPoint.h  traitement.cpp  traitement.h
